# BHI-360

./: .conf_i2c  .cong_spi  CMakeLists.txt  LICENSE  README.md  overlay for i2c
boards/: nrf52840dk_nrf52840.overlay
src/: add_imu.h  common.c  common.h  main.c  main_SPI.c  main_i2c.c
